# build-stash

./: .gitignore  README.md  TODO.md  build-stash.py  link-target.sh  pyproject.toml
.github/workflows/: ci.yml
build_stash/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
