[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build-stash"
version = "0.1.0"
description = "Redirect build-output directories out of cloud-synced trees into a local cache via symlinks"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
build-stash = "build_stash.cli:main"
